# civic-exchange-protocol

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  LICENSE  NOTICE  README.md  SECURITY.md  lychee.toml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs-python.yml  release-python.yml  weekly_link_checker.yml
0.0.1/: objects.inv
0.0.1/en/cli/: index.html
0.0.1/en/concepts/category-theory-foundation/: index.html
0.0.1/en/concepts/interoperability/: index.html
0.0.1/en/implementation/implementation-guide/: index.html
0.0.1/search/: search_index.json
0.0.2/en/api/: index.html
0.0.2/en/concepts/related-domains/: index.html
0.0.2/en/implementation/validator/: index.html
0.0.2/en/reference/reference-projects/: index.html
0.0.2/search/: search_index.json
0.0.3/: objects.inv  sitemap.xml
0.0.3/js/: validator.js
0.0.4/: 404.html
0.0.4/en/api/: index.html
0.0.4/en/reference/reference-projects/: index.html
dev/: 404.html  objects.inv  sitemap.xml
dev/en/: index.html
dev/en/api/: index.html
dev/en/cli/: index.html
dev/en/concepts/category-theory-foundation/: index.html
dev/en/concepts/interoperability/: index.html
dev/en/concepts/positioning-paper/: index.html
dev/en/concepts/related-domains/: index.html
dev/en/governance/evolution-policy-and-versioning/: index.html
dev/en/governance/objectives-and-vision/: index.html
dev/en/governance/vocabulary-process/: index.html
dev/en/implementation/cep-p3tags-binding/: index.html
dev/en/implementation/implementation-guide/: index.html
dev/en/implementation/validator/: index.html
dev/en/quick-start/: index.html
dev/en/reference/compatibility-matrix/: index.html
dev/en/reference/reference-projects/: index.html
dev/en/reference/reference-standards/: index.html
dev/search/: search_index.json
docs/en/: index.md
docs/en/implementation/: implementation-guide.md  validator.md
docs/en/reference/: reference-projects.md
examples-raw/relationship/: title1_01.json
examples/entity/: municipality_01.canonical.txt  municipality_01.json  nonprofit_01.canonical.txt  nonprofit_01.json  pac_01.canonical.txt  pac_01.json  school_district_01.canonical.txt  school_district_01.json
examples/exchange/: grant_01.json  simple_contract_01.json
localization/: base.yaml
localization/ca/: base.yaml  on.yaml  qc.yaml
localization/us/: base.yaml  ca.yaml  ny.yaml
schemas/: cep.entity.identifier-scheme.schema.json  cep.entity.schema.json  cep.exchange.schema.json  cep.relationship.schema.json  cep.vocabulary.schema.json
specifications/: snfei-specification.md
src/csharp/: .csproj
src/java/: pom.xml
src/python/src/civic_exchange_protocol/: __init__.py  _version.py  api.py
src/python/src/civic_exchange_protocol/cli/: cli.py
src/python/src/civic_exchange_protocol/core/: __init__.py
src/python/src/civic_exchange_protocol/entity/: __init__.py  builder.py  entity.py  entity_builder.py  identifiers.py
src/python/src/civic_exchange_protocol/exchange/: __init__.py  builder.py  exchange.py  exchange_builder.py  provenance.py  value.py
src/python/src/civic_exchange_protocol/relationship/: __init__.py  bilateral.py  builder.py  multilateral.py  relationship.py
src/python/src/civic_exchange_protocol/snfei/: __init__.py  builder.py  generator.py  localization.py  normalizer.py
src/python/src/civic_exchange_protocol/validation/: json_validator.py
src/python/src/civic_exchange_protocol/vocabulary/: types.py
src/python/tests/: test_core.py  test_entity_builder.py  test_exchange_builder.py  test_json_validator.py  test_rust_parity.py  test_snfei.py
src/rust/: README.md
src/rust/cep-core/: Cargo.toml
src/rust/cep-core/src/: assets.rs  attestation.rs  canonical.rs  error.rs  hash.rs  lib.rs  schema_registry.rs  timestamp.rs  version.rs
src/rust/cep-entity/: Cargo.toml
src/rust/cep-entity/src/: builder.rs  entity.rs  identifiers.rs  lib.rs
src/rust/cep-exchange/: Cargo.toml
src/rust/cep-exchange/src/: builder.rs  exchange.rs  lib.rs  provenance.rs  value.rs
src/rust/cep-relationship/: Cargo.toml
src/rust/cep-relationship/src/: bilateral.rs  builder.rs  lib.rs  multilateral.rs  relationship.rs
src/rust/cep-snfei/: Cargo.toml
src/rust/cep-snfei/src/: generator.rs  lib.rs  localization.rs  normalizer.rs
test_vectors/: entity_school_district_01.json  manifest.json
test_vectors/exchange/: exchange_title1_disbursement_01.json
test_vectors/schemas/: generation-vector-set.schema.json  localization-vector-set.schema.json  manifest.schema.json  normalization-vector-set.schema.json
test_vectors/schemas/v1.0/: generation-vector-set.schema.json  localization-vector-set.schema.json  manifest.schema.json  normalization-vector-set.schema.json
test_vectors/snfei/v1.0/: generation_full.json  localization_ca.json  localization_us.json  normalization_basic.json  normalization_edge_cases.json
vocabularies/: entity-type.v1.0.0.json  exchange-role.v1.0.0.json  exchange-type.v1.0.0.json  identifier-scheme.v1.0.0.json  party-role.v1.0.0.json  relationship-type.v1.0.0.json  resolution-method.v1.0.0.json  source-system.v1.0.0.json  value-type.v1.0.0.json
