[workspace]
resolver = "2"
members = [
    "src/rust/cep-core",
    "src/rust/cep-entity",
    "src/rust/cep-exchange",
    "src/rust/cep-relationship",
    "src/rust/cep-snfei",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/civic-interconnect/civic-exchange-protocol"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"
unicode-normalization = "0.1"
